# zcash-tax-tool

./: .gitignore  CHANGELOG.md  CHECKSUMS.json  CLAUDE.md  Cargo.toml  LOCALSTORAGE_SCHEMA.md  Makefile  README.md  playwright.config.js
.github/scripts/: update-rust-version.sh
.github/workflows/: ci.yml  coverage.yml  deploy.yml  update-rust.yml
backend/: pyproject.toml
cli/: Cargo.toml
cli/src/: db.rs  main.rs  rpc.rs  scanner.rs
core/: Cargo.toml
core/src/: lib.rs  scanner.rs  transaction.rs  types.rs
frontend/: app.js  index.html  integrity-check.js
frontend/e2e/: helpers.js  rpc.spec.js  scanner.spec.js  send.spec.js  theme.spec.js  wallet.spec.js
frontend/js/: addresses.js  app.js  constants.js  decrypt-viewer.js  rpc.js  scanner.js  send.js  utils.js  views.js  wallet.js
frontend/js/storage/: notes.js
frontend/pkg/: zcash_tx_viewer.d.ts  zcash_tx_viewer.js  zcash_tx_viewer_bg.wasm  zcash_tx_viewer_bg.wasm.d.ts
frontend/sass/: style.sass
html-builder/: Cargo.toml
html-builder/src/: lib.rs
qr/: Cargo.toml
qr/src/: lib.rs
qr/tests/: compare_qr.py
scripts/: generate-checksums.js
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs
